Fixes search button weirdness on smaller screens

--- a/app/assets/stylesheets/directory.css.sass
+++ b/app/assets/stylesheets/directory.css.sass
@@ -58,7 +58,7 @@
     box-shadow: 1px 1px 1px 1px rgba(0,0,0,0.2)
 
 .search_field
-  width: 85%
+  width: 80%
   height: 31px
   padding-left: 10px
   margin-right: 10px
